--- a/apps/interface/stacks/sandbox-administrator-account/interface.yml
+++ b/apps/interface/stacks/sandbox-administrator-account/interface.yml
@@ -131,3 +131,13 @@ Resources:
             Condition:
               StringEquals:
                 AWS:SourceArn: !Sub "arn:${AWS::Partition}:cloudfront::${AWS::AccountId}:distribution/${Distribution}"
+  # TODO: remove existing A record from dns.yml and deploy this
+  # DNSRecord:
+  #   Type: AWS::Route53::RecordSet
+  #   Properties:
+  #     Name: !FindInMap [EnvMap, !Ref Environment, DomainName]
+  #     Type: A
+  #     AliasTarget:
+  #       DNSName: !GetAtt Distribution.DomainName
+  #       HostedZoneId: Z2FDTNDATAQYW2
+  #     HostedZoneId: !ImportValue hosted-zone-id
