--- a/apps/api/stacks/sandbox-administrator-account/api.yml
+++ b/apps/api/stacks/sandbox-administrator-account/api.yml
@@ -8,6 +8,13 @@ Parameters:
       - test
       - live
 Resources:
+  FunctionLogGroup:
+    Type: AWS::Logs::LogGroup
+    UpdateReplacePolicy: Delete
+    DeletionPolicy: Delete
+    Properties:
+      LogGroupName: !Sub "${Environment}-aws-sandbox-accounts-api"
+      RetentionInDays: 7
   FunctionExecutionRole:
     Type: AWS::IAM::Role
     Properties:
@@ -43,8 +50,13 @@ Resources:
       CodeUri: ../../build
       Role: !GetAtt FunctionExecutionRole.Arn
       FunctionName: !Sub "${Environment}-aws-sandbox-accounts-api"
+      LoggingConfig:
+        ApplicationLogLevel: INFO
+        LogGroup: !Ref FunctionLogGroup
+        LogFormat: JSON
+        SystemLogLevel: WARN
       MemorySize: 256
-      Timeout: 120
+      Timeout: 5
       Tracing: Active
       Environment:
         Variables:
