--- a/apps/api/pyproject.toml
+++ b/apps/api/pyproject.toml
@@ -6,7 +6,7 @@ authors = [
     {name = "Alex Chesters",email = "alex@cheste.rs"}
 ]
 license = {text = "MIT"}
-requires-python = "==3.11"
+requires-python = ">=3.11,<3.12"
 dependencies = [
     "aws-lambda-powertools (>=3.20.0,<4.0.0)"
 ]
