--- a/ci/codepipeline.yml
+++ b/ci/codepipeline.yml
@@ -276,22 +276,6 @@ Resources:
                 RoleArn: !ImportValue ci-infrastructure-codepipeline-base-cloudformation-iam-role
                 TemplatePath: BuildArtifact::apps/auth-client/stacks/sandbox-administrator-account/auth-client.yml
                 TemplateConfiguration: BuildArtifact::apps/auth-client/stacks/sandbox-administrator-account/parameters/auth-client/test.json
-            - ActionTypeId:
-                Category: Deploy
-                Owner: AWS
-                Version: "1"
-                Provider: CloudFormation
-              InputArtifacts:
-                - Name: BuildArtifact
-              RunOrder: 1
-              Name: API
-              Configuration:
-                ActionMode: REPLACE_ON_FAILURE
-                Capabilities: CAPABILITY_NAMED_IAM,CAPABILITY_AUTO_EXPAND
-                StackName: test-aws-sandbox-accounts-api
-                RoleArn: !ImportValue ci-infrastructure-codepipeline-base-cloudformation-iam-role
-                TemplatePath: BuildArtifact::apps/api/stacks/sandbox-administrator-account/api.yml
-                TemplateConfiguration: BuildArtifact::apps/api/stacks/sandbox-administrator-account/parameters/api/test.json
         - Name: Deploy-Interface-To-Test
           Actions:
             - ActionTypeId:
@@ -345,6 +329,24 @@ Resources:
                     - name: BUCKET_NAME
                       value: test-aws-sandbox-accounts-interface-bucket-tgksqlpowtj1
                       type: PLAINTEXT
+        - Name: Deploy-API-To-Test
+          Actions:
+            - ActionTypeId:
+                Category: Deploy
+                Owner: AWS
+                Version: "1"
+                Provider: CloudFormation
+              InputArtifacts:
+                - Name: BuildArtifact
+              RunOrder: 1
+              Name: API
+              Configuration:
+                ActionMode: REPLACE_ON_FAILURE
+                Capabilities: CAPABILITY_NAMED_IAM,CAPABILITY_AUTO_EXPAND
+                StackName: test-aws-sandbox-accounts-api
+                RoleArn: !ImportValue ci-infrastructure-codepipeline-base-cloudformation-iam-role
+                TemplatePath: BuildArtifact::apps/api/stacks/sandbox-administrator-account/api.yml
+                TemplateConfiguration: BuildArtifact::apps/api/stacks/sandbox-administrator-account/parameters/api/test.json
         - Name: Deploy-Common-Resources-To-Live
           Actions:
             - ActionTypeId:
@@ -494,22 +496,6 @@ Resources:
                 RoleArn: !ImportValue ci-infrastructure-codepipeline-base-cloudformation-iam-role
                 TemplatePath: BuildArtifact::apps/auth-client/stacks/sandbox-administrator-account/auth-client.yml
                 TemplateConfiguration: BuildArtifact::apps/auth-client/stacks/sandbox-administrator-account/parameters/auth-client/live.json
-            - ActionTypeId:
-                Category: Deploy
-                Owner: AWS
-                Version: "1"
-                Provider: CloudFormation
-              InputArtifacts:
-                - Name: BuildArtifact
-              RunOrder: 1
-              Name: API
-              Configuration:
-                ActionMode: REPLACE_ON_FAILURE
-                Capabilities: CAPABILITY_NAMED_IAM,CAPABILITY_AUTO_EXPAND
-                StackName: live-aws-sandbox-accounts-api
-                RoleArn: !ImportValue ci-infrastructure-codepipeline-base-cloudformation-iam-role
-                TemplatePath: BuildArtifact::apps/api/stacks/sandbox-administrator-account/api.yml
-                TemplateConfiguration: BuildArtifact::apps/api/stacks/sandbox-administrator-account/parameters/api/live.json
         - Name: Deploy-Interface-To-Live
           Actions:
             - ActionTypeId:
@@ -563,3 +549,21 @@ Resources:
                     - name: BUCKET_NAME
                       value: live-aws-sandbox-accounts-interface-bucket-czgvayyk9fif
                       type: PLAINTEXT
+        - Name: Deploy-API-To-Live
+          Actions:
+            - ActionTypeId:
+                Category: Deploy
+                Owner: AWS
+                Version: "1"
+                Provider: CloudFormation
+              InputArtifacts:
+                - Name: BuildArtifact
+              RunOrder: 1
+              Name: API
+              Configuration:
+                ActionMode: REPLACE_ON_FAILURE
+                Capabilities: CAPABILITY_NAMED_IAM,CAPABILITY_AUTO_EXPAND
+                StackName: live-aws-sandbox-accounts-api
+                RoleArn: !ImportValue ci-infrastructure-codepipeline-base-cloudformation-iam-role
+                TemplatePath: BuildArtifact::apps/api/stacks/sandbox-administrator-account/api.yml
+                TemplateConfiguration: BuildArtifact::apps/api/stacks/sandbox-administrator-account/parameters/api/live.json
