--- a/apps/interface/stacks/sandbox-administrator-account/interface.yml
+++ b/apps/interface/stacks/sandbox-administrator-account/interface.yml
@@ -140,3 +140,8 @@ Resources:
         DNSName: !GetAtt Distribution.DomainName
         HostedZoneId: Z2FDTNDATAQYW2
       HostedZoneId: !ImportValue hosted-zone-id
+Outputs:
+  ClientId:
+    Value: !Ref Client
+    Export:
+      Name: !Sub "${Environment}-aws-sandbox-accounts-interface-client-id"
