--- a/tools/db-seeder/Makefile
+++ b/tools/db-seeder/Makefile
@@ -2,7 +2,7 @@ install:
 	poetry install
 
 test_db:
-	poetry run python -m db_seeder.main --table-name test-aws-sandbox-accounts-account-pool
+	poetry run python -m db_seeder.main --env test
 
 live_db:
-	poetry run python -m db_seeder.main --table-name live-aws-sandbox-accounts-account-pool
+	poetry run python -m db_seeder.main --env live
