--- a/apps/interface/package.json
+++ b/apps/interface/package.json
@@ -37,6 +37,7 @@
     "eslint-plugin-react": "^7.37.5",
     "globals": "^16.3.0",
     "jiti": "^2.5.1",
+    "sass-embedded": "^1.92.1",
     "tailwindcss": "^4.1.4",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.42.0",
