--- a/apps/api/stacks/sandbox-administrator-account/api.yml
+++ b/apps/api/stacks/sandbox-administrator-account/api.yml
@@ -96,6 +96,7 @@ Resources:
         AllowHeaders:
           - authorization
           - client
+          - content-type
         AllowMethods:
           - GET
           - OPTIONS
